--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['gpu', 'c', 'python']\n"
+      "['gpu', 'python']\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N=22\n"
+      "N=24\n"
      ]
     },
     {
@@ -91,57 +91,28 @@
       "  warn(NumbaPerformanceWarning(msg))\n",
       "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
       "  warn(NumbaPerformanceWarning(msg))\n",
-      "100%|██████████| 10/10 [00:15<00:00,  1.52s/it]\n"
+      "100%|██████████| 10/10 [00:01<00:00,  5.46it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLABS finished in 1.5177 on average, min: 1.5080, max: 1.5263\n"
+      "\tLABS finished in 0.1823 on average, min: 0.1802, max: 0.1902\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:15<00:00,  1.52s/it]\n"
+      "100%|██████████| 10/10 [00:01<00:00,  5.94it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tMaxCut finished in 1.5227 on average, min: 1.5157, max: 1.5264\n",
-      "N=24\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:06<00:00,  6.61s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 6.6131 on average, min: 6.5902, max: 6.6334\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:06<00:00,  6.63s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 6.6295 on average, min: 6.6214, max: 6.6379\n",
+      "\tMaxCut finished in 0.1676 on average, min: 0.1637, max: 0.1758\n",
       "N=26\n"
      ]
     },
@@ -149,28 +120,57 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [04:45<00:00, 28.57s/it]\n"
+      "100%|██████████| 10/10 [00:08<00:00,  1.23it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLABS finished in 28.5703 on average, min: 28.5505, max: 28.5849\n"
+      "\tLABS finished in 0.8143 on average, min: 0.8102, max: 0.8229\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [04:45<00:00, 28.52s/it]"
+      "100%|██████████| 10/10 [00:07<00:00,  1.31it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tMaxCut finished in 28.5143 on average, min: 28.5032, max: 28.5251\n"
+      "\tMaxCut finished in 0.7606 on average, min: 0.7571, max: 0.7692\n",
+      "N=28\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:32<00:00,  3.25s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLABS finished in 3.2480 on average, min: 3.2361, max: 3.2598\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:29<00:00,  2.99s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tMaxCut finished in 2.9858 on average, min: 2.9793, max: 2.9949\n"
      ]
     },
     {
@@ -183,13 +183,13 @@
    ],
    "source": [
     "# number of qubits\n",
-    "for N in [22, 24, 26]:\n",
+    "for N in [24, 26, 28]:\n",
     "    print(f\"N={N}\")\n",
     "    # QAOA depth\n",
-    "    p = 100\n",
+    "    p = 6\n",
     "\n",
     "    theta = np.random.uniform(0,1,2*p)\n",
-    "    G = nx.random_regular_graph(3, N, seed=42)\n",
+    "    G = nx.random_regular_graph(4, N, seed=42)\n",
     "\n",
     "    # Function initialization may not be fast\n",
     "    f_maxcut = get_qaoa_maxcut_objective(N, p, G)\n",
@@ -212,28 +212,20 @@
    "id": "b5abbd11-55ee-4ba3-b685-482e90180d2e",
    "metadata": {},
    "source": [
-    "The goal is to reduce the time to evaluate `f_labs(theta)` and `f_maxcut(theta)`. Typically, the number of evaluations is large (> 1000).\n",
-    "\n",
-    "This is what I measured on `g4dn.2xlarge` as of `944cbe93`:\n",
+    "This is what I measured on `g4dn.2xlarge` (NVIDIA T4 GPU) as the time to evaluate `f_labs(theta)` and `f_maxcut(theta)` (commit `f6f6f565`):\n",
     "\n",
     "```\n",
-    "N=22\n",
-    "\tLABS finished in 1.5177 on average, min: 1.5080, max: 1.5263\n",
-    "\tMaxCut finished in 1.5227 on average, min: 1.5157, max: 1.5264\n",
     "N=24\n",
-    "\tLABS finished in 6.6131 on average, min: 6.5902, max: 6.6334\n",
-    "\tMaxCut finished in 6.6295 on average, min: 6.6214, max: 6.6379\n",
+    "\tLABS finished in 0.1823 on average, min: 0.1802, max: 0.1902\n",
+    "\tMaxCut finished in 0.1676 on average, min: 0.1637, max: 0.1758\n",
     "N=26\n",
-    "\tLABS finished in 28.5703 on average, min: 28.5505, max: 28.5849\n",
-    "\tMaxCut finished in 28.5143 on average, min: 28.5032, max: 28.5251\n",
+    "\tLABS finished in 0.8143 on average, min: 0.8102, max: 0.8229\n",
+    "\tMaxCut finished in 0.7606 on average, min: 0.7571, max: 0.7692\n",
+    "N=28\n",
+    "\tLABS finished in 3.2480 on average, min: 3.2361, max: 3.2598\n",
+    "\tMaxCut finished in 2.9858 on average, min: 2.9793, max: 2.9949\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9fb870a1-9239-46eb-9d96-be02af4710d4",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
