--- a/examples/benchmark.ipynb
+++ b/examples/benchmark.ipynb
@@ -12,18 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d9a6d070-3524-4fe8-af23-c295751d7145",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['gpu', 'python']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from qokit.fur import get_available_simulator_names\n",
     "\n",
@@ -40,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6d84f2d6-68f2-481c-b1ba-6fcc87b6984e",
    "metadata": {},
    "outputs": [],
@@ -72,115 +64,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cc25c2a0-760d-4482-bf4d-19a0dc746def",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N=24\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 64 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "/opt/omniai/work/instance1/jupyter/py39/lib/python3.9/site-packages/numba/cuda/dispatcher.py:536: NumbaPerformanceWarning: Grid size 1 will likely result in GPU under-utilization due to low occupancy.\n",
-      "  warn(NumbaPerformanceWarning(msg))\n",
-      "100%|██████████| 10/10 [00:01<00:00,  5.46it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 0.1823 on average, min: 0.1802, max: 0.1902\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:01<00:00,  5.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 0.1676 on average, min: 0.1637, max: 0.1758\n",
-      "N=26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:08<00:00,  1.23it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 0.8143 on average, min: 0.8102, max: 0.8229\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:07<00:00,  1.31it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 0.7606 on average, min: 0.7571, max: 0.7692\n",
-      "N=28\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:32<00:00,  3.25s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tLABS finished in 3.2480 on average, min: 3.2361, max: 3.2598\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:29<00:00,  2.99s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\tMaxCut finished in 2.9858 on average, min: 2.9793, max: 2.9949\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# number of qubits\n",
     "for N in [24, 26, 28]:\n",
@@ -224,8 +111,30 @@
     "N=28\n",
     "\tLABS finished in 3.2480 on average, min: 3.2361, max: 3.2598\n",
     "\tMaxCut finished in 2.9858 on average, min: 2.9793, max: 2.9949\n",
+    "```\n",
+    "\n",
+    "Same benchmark on `g5.2xlarge` (NVIDIA A10G):\n",
+    "\n",
+    "```\n",
+    "N=24\n",
+    "\tLABS finished in 0.0821 on average, min: 0.0806, max: 0.0885\n",
+    "\tMaxCut finished in 0.0773 on average, min: 0.0759, max: 0.0836\n",
+    "N=26\n",
+    "\tLABS finished in 0.3509 on average, min: 0.3481, max: 0.3601\n",
+    "\tMaxCut finished in 0.3308 on average, min: 0.3289, max: 0.3393\n",
+    "N=28\n",
+    "\tLABS finished in 1.3889 on average, min: 1.3856, max: 1.3953\n",
+    "\tMaxCut finished in 1.3112 on average, min: 1.3088, max: 1.3201\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "549162cf-99c4-4473-bc01-87b616dae7bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
